--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,11 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #fff;
 }
 
-/* reset */
-
-ul,
-ol {
-  list-style: none;
+a {
+  text-decoration: none;
 }
 
 h1,
@@ -27,55 +18,72 @@ p {
   margin: 0;
 }
 
-a {
-  text-decoration: none;
+ul,
+ol {
+  list-style: none;
+  list-style-type: none;
+}
+
+p {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 
 img {
+  display: block;
   max-width: 100%;
   height: auto;
-  display: block;
 }
 
 button {
   cursor: pointer;
 }
 
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(100%);
-  margin: -1px;
+/* common */
+.section {
+  padding: 96px 0;
 }
 
-/* common */
-
+@media only screen and (min-width: 1158px) {
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+}
 .container {
-  width: 100%; /* Використовує повну ширину */
-  max-width: 1158px; /* Ліміт ширини */
-  padding: 0 16px; /* Внутрішні відступи для мобільного */
-  margin: 0 auto; /* Центрування */
-  overflow: hidden; /* Запобігання переповненню */
+   min-width: 320px;
+  max-width: 320px;
+  padding: 0 16px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
-    padding: 0 24px; /* Більше відступів для ширших екранів */
   }
 }
 
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
-    padding: 0 32px;
+    padding: 0 15px;
   }
+}
+.social-icon {
+  fill: #f4f4fd;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /* header */
@@ -87,9 +95,8 @@ button {
 }
 
 .header-container {
-  display: flex;
+display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 
 .nav-list,
@@ -109,7 +116,13 @@ button {
 
 .header-logo {
   padding: 16px 0;
-  display: block;
+  margin-right: auto;
+}
+@media only screen and (min-width: 768px) {
+  .header-logo {
+    padding: 24px 0;
+    margin-right: 120px;
+  }
 }
 
 .header-logo .logo-part {
@@ -143,11 +156,6 @@ button {
     gap: 40px;
   }
 
-  .header-logo {
-    padding: 24px 0;
-    margin-right: 120px;
-  }
-
   .nav-link {
     display: block;
     padding: 24px 0;
@@ -156,7 +164,6 @@ button {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
-
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
@@ -166,15 +173,12 @@ button {
 
   .nav-link.current::after {
     content: "";
-
     position: absolute;
     left: 0;
     bottom: -1px;
-
     width: 100%;
     height: 4px;
     border-radius: 2px;
-
     background-color: #404bbf;
   }
 
@@ -236,11 +240,9 @@ button {
   width: 100%;
   height: 100%;
   background-color: #fff;
-
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -255,7 +257,6 @@ button {
   position: relative;
   padding-top: 72px;
   padding-bottom: 40px;
-
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -294,7 +295,7 @@ button {
   background-position: center;
   background-size: cover;
 }
-@media (min-resolution: 192dpi) {
+@media (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
@@ -403,16 +404,75 @@ button {
 
 /* #region Our advantages */
 
+@media only screen and (min-width: 768px) {
+  .advantages-list {
+    display: flex;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+  }
+}
+
+.advantages-item {
+  margin-bottom: 72px;
+  max-width: 288px;
+}
+.advantages-item :last-child {
+  margin-bottom: 0;
+}
+@media only screen and (min-width: 768px) {
+  .advantages-item {
+    margin-bottom: 0;
+  
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .advantages-item {
+    max-width: 264px;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .svg-adv-container {
+    display: flex;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    background: #f4f4fd;
+    margin-bottom: 8px;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.svg-adv {
+  display: none;
+}
+@media only screen and (min-width: 1158px) {
+  .svg-adv {
+    display: inherit;
+  }
+}
+.subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
 .advantage-title {
+  margin-bottom: 8px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
-  letter-spacing: 0.02em;
   text-align: center;
-  color: #2e2f42;
-  margin-bottom: 8px;
 }
-
+@media only screen and (min-width: 768px) {
+  .advantage-title {
+    text-align: left;
+  }
+}
 @media only screen and (min-width: 1158px) {
   .advantage-title {
     font-weight: 500;
@@ -423,72 +483,11 @@ button {
 
 .advantage-text {
   font-weight: 500;
-  letter-spacing: 0.02em;
 }
 
 @media only screen and (min-width: 1158px) {
   .advantage-text {
-    font-weight: 400;
-  }
-}
-
-.advantages-list {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: center;
-  gap: 72px;
-}
-
-@media only screen and (min-width: 768px) {
-  .advantages-list {
-    display: flex;
-    row-gap: 72px;
-    column-gap: 24px;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-}
-
-.advantages-item {
-  width: calc(100% - 32px); /* Для мобільного */
-  max-width: 320px; /* Гранична ширина для вузьких екранів */
-  margin-bottom: 16px; /* Відступ між елементами */
-}
-.advantages-item :last-child {
-  margin-bottom: 0;
-}
-@media only screen and (min-width: 768px) {
-  .advantages-item {
-    max-width: 356px;
-  }
-}
-
-@media only screen and (min-width: 1158px) {
-  .advantages-item {
-    max-width: 264px;
-  }
-}
-
-@media only screen and (min-width: 1158px) {
-  .svg-adv-container {
-    display: flex;
-    border: 1px solid #8e8f99;
-    border-radius: 4px;
-    /* width: 264px; */
-    height: 112px;
-    background: #f4f4fd;
-    margin-bottom: 8px;
-    justify-content: center;
-    align-items: center;
-  }
-}
-.svg-adv {
-  display: none;
-}
-@media only screen and (min-width: 1158px) {
-  .svg-adv {
-    display: inherit;
+    font-weight: initial;
   }
 }
 
@@ -498,16 +497,21 @@ button {
 
 .our-team-section {
   background-color: #f4f4fd;
+  
 }
-
+@media only screen and (min-width: 1158px) {
+ .our-team-section {
+    padding: 120px 0;
+  }
+}
 .our-team-title {
-  margin-bottom: 72px;
+    font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
-  letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .our-team-list {
@@ -519,11 +523,11 @@ button {
 
 @media only screen and (min-width: 768px) {
   .our-team-list {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    row-gap: 64px;
-    column-gap: 24px;
+           flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        row-gap: 64px;
+        column-gap: 24px;
   }
 }
 .our-team-container {
@@ -565,6 +569,7 @@ button {
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .social-link:hover,
 .social-link:focus {
   background-color: #404bbf;
@@ -582,13 +587,18 @@ button {
   text-transform: capitalize;
 }
 
-.portfolio-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 72px;
+@media only screen and (min-width: 768px) {
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
 }
 
+@media only screen and (min-width: 1158px) {
+  .portfolio-list {
+    row-gap: 48px;
+  }
 .portfolio-item {
   background: #fff;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -622,21 +632,24 @@ button {
   height: auto;
 }
 
-.overlay {
-  color: #f4f4fd;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  padding: 40px 32px;
-  top: 0;
-  left: 0;
-  transform: translateY(100%);
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  background-color: #4d5ae5;
+.overlay-text {
+    color: #f4f4fd;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 40px 32px;
+    top: 0;
+    left: 0;
+    transform: translateY(100%);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #4d5ae5;
 }
+
+
+
 .portfolio-container {
   border: 1px solid #e7e9fc;
   border-top: none;
