--- a/css/styles.css
+++ b/css/styles.css
@@ -47,10 +47,11 @@ button {
 
 @media only screen and (min-width: 1158px) {
   .section {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    background-color: #ffffff;
+  padding: 120px 0 120px;
   }
 }
+
 .container {
    min-width: 320px;
   max-width: 320px;
@@ -68,11 +69,10 @@ button {
   .container {
     max-width: 1158px;
     padding: 0 15px;
+   
   }
 }
-.social-icon {
-  fill: #f4f4fd;
-}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -404,6 +404,14 @@ display: flex;
 
 /* #region Our advantages */
 
+.our-advantage-title {
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  color: #ffffff;
+  letter-spacing: 0.02em;
+}
+
 @media only screen and (min-width: 768px) {
   .advantages-list {
     display: flex;
@@ -412,6 +420,17 @@ display: flex;
   }
 }
 
+@media only screen and (min-width: 1158px) {
+  .advantages-list {
+ 
+    
+
+        row-gap: 72px;
+        column-gap: 24px;
+        flex-wrap: wrap;
+        justify-content: center;
+  }
+}
 .advantages-item {
   margin-bottom: 72px;
   max-width: 288px;
@@ -428,7 +447,8 @@ display: flex;
 
 @media only screen and (min-width: 1158px) {
   .advantages-item {
-    max-width: 264px;
+    background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
   }
 }
 @media only screen and (min-width: 1158px) {
@@ -481,13 +501,30 @@ display: flex;
   }
 }
 
+@media only screen and (min-width: 1158px) {
+.section-title {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+  }
+
 .advantage-text {
   font-weight: 500;
 }
 
 @media only screen and (min-width: 1158px) {
   .advantage-text {
-    font-weight: initial;
+      font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  text-align: left;
   }
 }
 
@@ -554,9 +591,10 @@ display: flex;
   justify-content: center;
 }
 
-.svg-item {
+.social-item {
   width: 40px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link {
@@ -574,17 +612,28 @@ display: flex;
 .social-link:focus {
   background-color: #404bbf;
 }
-
+.svg-img {
+  width: 18px;
+  height: 18px;
+  fill: #f4f4fd;
+}
 /* #endregion */
 /* #region Our Portfolio */
+@media only screen and (min-width: 1158px) {
+.portfolio{
+          padding-top: 120px;
+        padding-bottom: 120px;
+}
+}
 .portfolio-title {
-  margin-bottom: 72px;
+    font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
-  color: #2e2f42;
   text-transform: capitalize;
+  color: #2e2f42;
+  margin-bottom: 72px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -598,15 +647,17 @@ display: flex;
 @media only screen and (min-width: 1158px) {
   .portfolio-list {
     row-gap: 48px;
+   
+  column-gap: 24px;
   }
 .portfolio-item {
   background: #fff;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:not(:last-child) {
+/* .portfolio-item:not(:last-child) {
   margin-bottom: 48px;
-}
+} */
 
 @media only screen and (min-width: 768px) {
   .portfolio-item {
@@ -619,7 +670,12 @@ display: flex;
 
 @media only screen and (min-width: 1158px) {
   .portfolio-item {
-    width: calc((100% - 2 * 24px) / 3);
+   width: calc((100% - 48px) / 3);
+  cursor: pointer;
+  overflow: hidden;
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 .portfolio-wrapper {
@@ -630,30 +686,32 @@ display: flex;
 .portfolio-img {
   width: 100%;
   height: auto;
-}
+    display: block;
+} 
 
 .overlay-text {
-    color: #f4f4fd;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    padding: 40px 32px;
-    top: 0;
-    left: 0;
-    transform: translateY(100%);
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    background-color: #4d5ae5;
+     position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
 
 .portfolio-container {
-  border: 1px solid #e7e9fc;
-  border-top: none;
   padding: 32px 16px;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
 }
 
 /* #endregion */
@@ -775,6 +833,10 @@ display: flex;
 .svg-footer-item {
   width: 40px;
   height: 40px;
+}
+.social-icon {
+  fill: #f4f4fd;
+ 
 }
 .footer-link {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
